--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -64,15 +64,33 @@
       top:50%;
       transform-origin: 100%;
       transform: rotate(90deg);
-      transition: all 0.5s;
+      transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.55, 0.58, 1);
     }
 
   </style>
 
   <script>
+    let secondHand = document.querySelector('.second-hand');
+    let minHand = document.querySelector('.min-hand');
+    let hourHand = document.querySelector('.hour-hand');
 
+    function setDate() {
+      const now = new Date();
+      const second = now.getSeconds();
+      const secondDegrees = ( ( second / 60 ) * 360 ) + 90;
+      secondHand.style.transform = `rotate(${secondDegrees}deg)`;
 
+      const min = now.getMinutes();
+      const minuteDegrees = ( ( min / 60 ) * 360 ) + 90;
+      minHand.style.transform = `rotate(${minuteDegrees}deg)`;
+
+      const hour = now.getHours();
+      const hourDegrees = ( ( hour / 12 ) * 360 ) +90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    }
+
+    setInterval(setDate, 1000)
   </script>
 </body>
 </html>
