--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -9,7 +9,7 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
-    <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px" data-sokol="falcon">
 
     <label for="blur">Blur:</label>
     <input type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
@@ -62,6 +62,20 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input');
+
+    function changedFunction() {
+      console.log(this.value);
+      const pixel = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + pixel);
+    }
+
+    inputs.forEach( 
+      input => {
+        input.addEventListener('change', changedFunction);
+        input.addEventListener('mousemove', changedFunction);
+      }
+    )
   </script>
 
 </body>
