--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,14 +37,28 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const inventorName = inventors.map( inventor => `${inventor.first} ${inventor.last}` )
+    console.log(inventorName);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortYear = inventors.sort( (a, b) => a.year > b.year ? 1 : -1 )
+    console.table(sortYear);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalLive = inventors.reduce( (total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0)
+    console.log(totalLive);
 
     // 5. Sort the inventors by years lived
+    const sortLived = inventors.sort( (a, b) => {
+      const lastInventor = a.passed - a.year;
+      const nextInventor = b.passed - b.year;
+      return lastInventor > nextInventor ? 1 : -1;
+    })
+    console.table(sortLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
