--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -63,13 +63,36 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // or
+     // const links = [...category.querySelectorAll('a')];
+    // const de = links.map( link => link.textContent )
+    //                 .filter( link => link.includes('de') );
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort( (lastOne, nextOne) => {
+      const [aLast, aNext] = lastOne.split(', ');
+      const [bLast, bNext] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const counter = data.reduce( (obj, index) => {
+      if( !obj[index] ) {
+        obj[index] = 0;
+      }
+      obj[index]++;
+      return obj;
+    }, {});
+
+    console.log(counter);
 
   </script>
 </body>
