finish sort array

--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -34,14 +34,21 @@ function findMatches(wordToMach, cities) {
   })
 }
 
+function numberWithCommas(x) {
+  return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',' )
+}
+
 function displayMatches() {
   // console.log(this.value);
   const matchArray = findMatches(this.value, cities);
   const html = matchArray.map( place => {
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace( regex, `<span class="hl">${this.value}</span>`)
+    const stateName = place.state.replace( regex, `<span class="hl">${this.value}</span>`)
     return `
       <li>
-        <span> ${place.city} ${place.state}</span>
-        <span> ${place.population} </span>
+        <span> ${cityName} ${stateName}</span>
+        <span> ${numberWithCommas(place.population)} </span>
       </li>
     `
   }).join('');
