--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -43,7 +43,10 @@ function displayMatches() {
   const matchArray = findMatches(this.value, cities);
   const html = matchArray.map( place => {
     const regex = new RegExp(this.value, 'gi');
-    const cityName = place.city.replace( regex, `<span class="hl">${this.value}</span>`)
+    // console.log('regex', regex);
+    // console.log('this.value', this.value);
+    const cityName = place.city.replace( regex, `<span class="hl">${this.value}</span>`);
+    // console.log('cityName', cityName);
     const stateName = place.state.replace( regex, `<span class="hl">${this.value}</span>`)
     return `
       <li>
